--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\khucanhminh.nguyen\AppData\Local\Temp\testng-eclipse--1344553454\testng-customsuite.xml</span>
+                    <span>C:\Users\khucanhminh.nguyen\AppData\Local\Temp\testng-eclipse--254004402\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,17 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_01_CheckEnvironment" class="method navigator-link" hash-for-method="TC_01_ValidateCurrentUrl">TC_01_ValidateCurrentUrl</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_01_CheckEnvironment" class="method navigator-link" hash-for-method="TC_02_ValidatePageTitle">TC_02_ValidatePageTitle</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="webdriver.Topic_01_CheckEnvironment" class="method navigator-link" hash-for-method="TC_03_LoginFormDisplayed">TC_03_LoginFormDisplayed</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="webdriver.TC_01_GitFlow" class="method navigator-link" hash-for-method="TC_01">TC_01</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -129,28 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">webdriver.Topic_01_CheckEnvironment</span>
+              <span class="class-name">webdriver.TC_01_GitFlow</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_ValidateCurrentUrl">
-                  </a> <!-- TC_01_ValidateCurrentUrl -->
-                  <span class="method-name">TC_01_ValidateCurrentUrl</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_ValidatePageTitle">
-                  </a> <!-- TC_02_ValidatePageTitle -->
-                  <span class="method-name">TC_02_ValidatePageTitle</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_03_LoginFormDisplayed">
-                  </a> <!-- TC_03_LoginFormDisplayed -->
-                  <span class="method-name">TC_03_LoginFormDisplayed</span>
+                  <a name="TC_01">
+                  </a> <!-- TC_01 -->
+                  <span class="method-name">TC_01</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -158,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\khucanhminh.nguyen\AppData\Local\Temp\testng-eclipse--1344553454\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\khucanhminh.nguyen\AppData\Local\Temp\testng-eclipse--254004402\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -167,7 +143,7 @@
 &lt;suite parallel=&quot;none&quot; name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;webdriver.Topic_01_CheckEnvironment&quot;/&gt;
+      &lt;class name=&quot;webdriver.TC_01_GitFlow&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -207,24 +183,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_03_LoginFormDisplayed')
-data.setCell(0, 2, 'webdriver.Topic_01_CheckEnvironment')
-data.setCell(0, 3, 33);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_01_ValidateCurrentUrl')
-data.setCell(1, 2, 'webdriver.Topic_01_CheckEnvironment')
-data.setCell(1, 3, 11);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_02_ValidatePageTitle')
-data.setCell(2, 2, 'webdriver.Topic_01_CheckEnvironment')
-data.setCell(2, 3, 8);
+data.setCell(0, 1, 'TC_01')
+data.setCell(0, 2, 'webdriver.TC_01_GitFlow')
+data.setCell(0, 3, 9784);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 52 ms</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,27 +218,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">webdriver.Topic_01_CheckEnvironment</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">beforeClass</span>
+              <div class="chronological-class-name">webdriver.TC_01_GitFlow</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">TC_01</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">TC_01_ValidateCurrentUrl</span>
-                <span class="method-start">4471 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_02_ValidatePageTitle</span>
-                <span class="method-start">4483 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_03_LoginFormDisplayed</span>
-                <span class="method-start">4493 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">afterClass</span>
-                <span class="method-start">4527 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
